# FBXImport

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFBXImport.cmake
importer/: CMakeLists.txt
importer/include/: Decoder.h  Element.h  FBXImport.h  Mesh.h  Node.h  Parser.h  Span.h  Stream.h  Util.h  Vector3.h
importer/include/FBX/: Decoder.h  FBXImport.h  Face.h  Material.h  Mesh.h  Model.h  Node.h  Object.h  Parser.h  Process.h  Scene.h  Settings.h  Span.h  Stream.h  Texture.h  TriangulateProcess.h  Util.h  Vector2.h  Vector3.h
importer/src/: Decoder.cpp  Parser.cpp  Stream.cpp  TriangulateProcess.cpp
test/: CMakeLists.txt  main.cpp
test/models/: Fox.FBX  Fox_ASCII.FBX  Fox_ASCII.fbx  Fox_Polygons.fbx  Fox_Quads.fbx  Fox_Triangles.fbx  fox.fbx
